Correction overflow sur mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -20,7 +20,7 @@ body {
     color: var(--primary-color);
 }
 
-@media only screen and (max-width: 950px) {
+@media (max-device-width: 950px) {
     body {
         -webkit-overflow-scrolling: touch;
         overflow: auto !important;
@@ -127,7 +127,7 @@ body {
     }
 }
 
-@media only screen and (max-width: 950px) {
+@media (max-device-width: 950px) {
     .nav-menu {
         display: none;
     }
@@ -193,7 +193,7 @@ body {
                 opacity: 1;
             }
 
-            @media only screen and (min-width: 950px) {
+            @media (min-width: 950px) {
                 & > .card > img {
                     transform: translateY(-6vh);
                 }
